[package]
name = "sstp_rust"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dotenvy = "0.15"
nix = { version = "0.27", features = ["socket"] }
libc = "0.2"
chrono = "0.4"
rand = "0.8"
tun = "0.6"
anyhow = "1.0"
pnet_packet = "0.34.0"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }  # ← важно!
